--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,48 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+  blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 * {
   box-sizing: border-box; }
 
@@ -10,3 +55,99 @@ body {
 
 main {
   display: block; }
+
+button {
+  border: none;
+  background-color: transparent;
+  margin: 0;
+  padding: 0; }
+
+button:hover {
+  cursor: pointer; }
+
+button[disabled]:hover {
+  cursor: default; }
+
+.face {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 640px;
+  height: 350px;
+  background-color: #000; }
+
+.earth {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  left: 50%;
+  top: 50%;
+  margin-left: -150px;
+  margin-top: -150px;
+  border-radius: 300px;
+  background-color: blue; }
+
+.face .time {
+  position: absolute;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  left: 0;
+  top: 50%;
+  margin-top: -15px;
+  text-align: center;
+  color: white; }
+
+.controller {
+  position: absolute;
+  left: 0;
+  top: 350px;
+  width: 640px;
+  height: 30px;
+  color: #fff;
+  background-color: #333; }
+
+.controller .time {
+  display: inline-block;
+  width: 280px;
+  font-size: 9px;
+  text-align: center; }
+
+.controller .btn-gotohead {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/gotohead.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  background-size: 40px;
+  text-indent: -9999px; }
+
+.controller .btn-play {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/pause.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  background-size: 40px;
+  text-indent: -9999px; }
+
+.controller .btn-play.pause {
+  background-image: url(../img/play.svg); }
+
+.controller .btn-sound {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/sound_on.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  background-size: 40px;
+  text-indent: -9999px; }
+
+.controller .btn-setting {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/setting.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  background-size: 40px;
+  text-indent: -9999px; }
