--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+@import "reset";
+
 * {
   box-sizing: border-box;
 }
@@ -13,3 +15,130 @@ body {
 main {
   display: block;
 }
+
+button {
+  border: none;
+  background-color: transparent;
+
+  margin: 0;
+  padding: 0;
+  }
+  button:hover {
+    cursor: pointer;
+  }
+  button[disabled]:hover {
+    cursor: default;
+  }
+
+.face {
+  position: absolute;
+
+  left: 0;
+  top: 0;
+
+  width: 640px;
+  height: 350px;
+
+  background-color: #000;
+}
+
+.earth {
+  position: absolute;
+
+  width: 300px;
+  height: 300px;
+
+  left: 50%;
+  top: 50%;
+
+  margin-left: -150px;
+  margin-top: -150px;
+
+  border-radius: 300px;
+
+  background-color: blue;
+}
+
+.face .time {
+  position: absolute;
+
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+
+  left: 0;
+  top: 50%;
+
+  margin-top: -15px;
+
+  text-align: center;
+
+  color: white;
+}
+
+.controller {
+  position: absolute;
+
+  left: 0;
+  top: 350px;
+
+  width: 640px;
+  height: 30px;
+
+  color: #fff;
+  background-color: #333;
+  }
+
+  .controller .time {
+    display: inline-block;
+    width: 280px;
+    font-size: 9px;
+
+    text-align: center;
+  }
+
+  .controller .btn-gotohead {
+    width: 30px;
+    height: 30px;
+    background-image: url(../img/gotohead.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 35%;
+    background-size: 40px;
+
+    text-indent: -9999px;
+  }
+  .controller .btn-play {
+    width: 30px;
+    height: 30px;
+    background-image: url(../img/pause.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 35%;
+    background-size: 40px;
+
+    text-indent: -9999px;
+  }
+  .controller .btn-play.pause {
+    background-image: url(../img/play.svg);
+  }
+  .controller .btn-sound {
+    width: 30px;
+    height: 30px;
+    background-image: url(../img/sound_on.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 35%;
+    background-size: 40px;
+
+    text-indent: -9999px;
+  }
+  .controller .btn-sound.off {
+  }
+  .controller .btn-setting {
+    width: 30px;
+    height: 30px;
+    background-image: url(../img/setting.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 35%;
+    background-size: 40px;
+
+    text-indent: -9999px;
+  }
