--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -23,4 +23,5 @@ html(lang='en')
           button.btn-setting(disabled='') Setting
     script(src='js/lib/jquery.min.js')
     script(src='js/lib/lodash.min.js')
+    script(src='js/lib/three.min.js')
     script(src='js/main.js')
