--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,13 @@ button[disabled]:hover {
   height: 350px;
   background-color: #000; }
 
+.movie {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0; }
+
 .earth {
   position: absolute;
   width: 300px;
