--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -8,8 +8,9 @@ html(lang='en')
     .wrapper
       main
         .face
-          .earth
-          .time
+          //- .earth
+          .movie#container
+          //- .time
             time
         .controller
           button.btn-gotohead Go to head
@@ -24,4 +25,7 @@ html(lang='en')
     script(src='js/lib/jquery.min.js')
     script(src='js/lib/lodash.min.js')
     script(src='js/lib/three.min.js')
+    script(src='js/lib/CanvasRenderer.js')
+    script(src='js/lib/Projector.js')
+    script(src='js/lib/stats.min.js')
     script(src='js/main.js')
