--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,6 +42,16 @@ button {
   background-color: #000;
 }
 
+.movie {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+
+  left: 0;
+  top: 0;
+}
+
 .earth {
   position: absolute;
 
