--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -9,7 +9,9 @@ html(lang='en')
       main
         .face
           //- .earth
-          .movie#container
+          .three#container
+          .movie
+            canvas
           //- .time
             time
         .controller
