--- a/css/style.css
+++ b/css/style.css
@@ -76,23 +76,12 @@ button[disabled]:hover {
   height: 350px;
   background-color: #000; }
 
-.movie {
+.three, .movie {
   position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0; }
-
-.earth {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  left: 50%;
-  top: 50%;
-  margin-left: -150px;
-  margin-top: -150px;
-  border-radius: 300px;
-  background-color: blue; }
 
 .face .time {
   position: absolute;
