--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,7 +42,7 @@ button {
   background-color: #000;
 }
 
-.movie {
+.three, .movie {
   position: absolute;
 
   width: 100%;
@@ -50,23 +50,6 @@ button {
 
   left: 0;
   top: 0;
-}
-
-.earth {
-  position: absolute;
-
-  width: 300px;
-  height: 300px;
-
-  left: 50%;
-  top: 50%;
-
-  margin-left: -150px;
-  margin-top: -150px;
-
-  border-radius: 300px;
-
-  background-color: blue;
 }
 
 .face .time {
