--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -9,7 +9,7 @@ html(lang='en')
       main
         .face
           //- .earth
-          .three#container
+          .three
           .movie
             canvas
           //- .time
