implement jp__co__yahoo__headlines

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -27,6 +27,7 @@ html(lang='en')
           button.btn-setting(disabled='') Setting
 
     include ./template/com__youtube
+    include ./template/jp__co__yahoo__headlines
     script(src='js/lib/jquery.min.js')
     script(src='js/lib/lodash.min.js')
     script(src='js/lib/three.min.js')
