--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 
 .bg-site > .the-earth-the-movie__site-body {
   @import "bg-site/com__youtube/*";
+  @import "bg-site/jp__co__yahoo__headlines/*";
 }
 
 * {
