--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,15 @@ button {
     cursor: default;
   }
 
+.bg-site {
+  position: absolute;
+
+  left: 0;
+  top: 0;
+
+  z-index: -1;
+}
+
 .face {
   position: absolute;
 
@@ -45,6 +54,8 @@ button {
   height: 350px;
 
   background-color: #000;
+
+  z-index: 0;
 }
 
 .three, .movie {
