load all bg site styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,7 @@
 @import "reset";
 
 .bg-site > .the-earth-the-movie__site-body {
-  @import "bg-site/com__youtube/*";
-  @import "bg-site/jp__co__yahoo__headlines/*";
+  @import "bg-site/*";
 }
 
 * {
