--- a/src/jade/template/com__youtube.jade
+++ b/src/jade/template/com__youtube.jade
@@ -1,6 +1,6 @@
-// from https://www.youtube.com/watch?v=v64F7YaY27U
+//- from https://www.youtube.com/watch?v=v64F7YaY27U
 script.template--com__youtube(type="text/template")
-  div.the-earth-the-movie__site-body.
+  div.the-earth-the-movie__site-body.com__youtube.
     <div dir="ltr" id="body" class="  ltr  webkit webkit-537  exp-responsive exp-scrollable-guide   site-center-aligned site-as-giant-card appbar-hidden    visibility-logging-enabled   not-nirvana-dogfood  not-yt-legacy-css      flex-width-enabled      flex-width-enabled-snap  page-loaded" data-spf-name="watch">
 
     <div id="early-body"></div>
