--- a/src/jade/template/jp__co__yahoo__headlines.jade
+++ b/src/jade/template/jp__co__yahoo__headlines.jade
@@ -1,6 +1,6 @@
-// http://headlines.yahoo.co.jp/hl?a=20160413-00010006-afpbbnewsv-int
+//- from http://headlines.yahoo.co.jp/hl?a=20160413-00010006-afpbbnewsv-int
 script.template--jp__co__yahoo__headlines(type="text/template")
-  div.the-earth-the-movie__site-body.
+  div.the-earth-the-movie__site-body.jp__co__yahoo__headlines.
     <div class="yj950-2">
 
     <div id="wrapper">
