--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -29,6 +29,8 @@ html(lang='en')
     include ./template/com__youtube
     include ./template/jp__co__yahoo__headlines
     include ./template/jp__nicovideo__www
+    include ./template/net__gigazine
+    include ./template/com__asahi__www
     script(src='js/lib/jquery.min.js')
     script(src='js/lib/lodash.min.js')
     script(src='js/lib/three.min.js')
