--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,9 @@
   &.net__gigazine {
     @import "bg-site/net__gigazine/*";
   }
+  &.com__asahi__www {
+    @import "bg-site/com__asahi__www/*";
+  }
 }
 
 * {
