--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,17 @@ table {
 * {
   box-sizing: border-box; }
 
+html, body {
+  width: 100%;
+  height: 100%; }
+
 html {
   font-size: 10px; }
 
 body {
   font-size: 14px;
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  overflow: hidden; }
 
 main {
   display: block; }
@@ -61,93 +66,114 @@ button {
   background-color: transparent;
   margin: 0;
   padding: 0; }
+  button:hover {
+    cursor: pointer; }
+  button[disabled]:hover {
+    cursor: default; }
 
-button:hover {
-  cursor: pointer; }
+.wrapper {
+  position: static; }
 
-button[disabled]:hover {
-  cursor: default; }
-
-.bg-site {
+.three {
   position: absolute;
   left: 0;
   top: 0;
   z-index: -1; }
 
-.face {
+.main {
   position: absolute;
   left: 0;
   top: 0;
-  width: 640px;
-  height: 350px;
-  background-color: #000;
-  z-index: 0; }
-
-.three, .movie {
-  position: absolute;
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0; }
-  .three canvas, .movie canvas {
-    width: 100%;
-    height: 100%; }
+  background-image: url(../img/bg.jpg);
+  background-size: cover; }
 
-.face .time {
+.bg-site {
   position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 30px;
-  line-height: 30px;
-  left: 0;
-  top: 50%;
-  margin-top: -15px;
-  text-align: center;
-  color: white; }
+  height: 100%;
+  z-index: 0; }
 
-.controller {
+.cover {
   position: absolute;
   left: 0;
-  top: 350px;
+  top: 0;
+  width: 100%;
+  height: 100%; }
+
+.media {
+  position: absolute;
+  left: 50%;
+  top: 50%;
   width: 640px;
-  height: 30px;
-  color: #fff;
-  background-color: #333; }
-  .controller .time {
-    display: inline-block;
-    width: 280px;
-    font-size: 9px;
-    text-align: center; }
-  .controller .btn-gotohead {
-    width: 30px;
+  height: 360px;
+  margin-left: -320px;
+  margin-top: -180px;
+  z-index: 1; }
+  .media .face {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 640px;
+    height: 350px;
+    background-color: #000;
+    z-index: 0; }
+    .media .face .movie {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0; }
+      .media .face .movie canvas {
+        width: 100%;
+        height: 100%; }
+  .media .controller {
+    position: absolute;
+    left: 0;
+    top: 350px;
+    width: 640px;
     height: 30px;
-    background-image: url(../img/gotohead.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
-    text-indent: -9999px; }
-  .controller .btn-play {
-    width: 30px;
-    height: 30px;
-    background-image: url(../img/pause.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
-    text-indent: -9999px; }
-  .controller .btn-play.pause {
-    background-image: url(../img/play.svg); }
-  .controller .btn-sound {
-    width: 30px;
-    height: 30px;
-    background-image: url(../img/sound_on.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
-    text-indent: -9999px; }
-  .controller .btn-setting {
-    width: 30px;
-    height: 30px;
-    background-image: url(../img/setting.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
-    text-indent: -9999px; }
+    color: #fff;
+    background-color: #333; }
+    .media .controller .time {
+      display: inline-block;
+      width: 280px;
+      font-size: 9px;
+      text-align: center; }
+    .media .controller .btn-gotohead {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/gotohead.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+      text-indent: -9999px; }
+    .media .controller .btn-play {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/pause.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+      text-indent: -9999px; }
+    .media .controller .btn-play.pause {
+      background-image: url(../img/play.svg); }
+    .media .controller .btn-sound {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/sound_on.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+      text-indent: -9999px; }
+    .media .controller .btn-setting {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/setting.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+      text-indent: -9999px; }
