--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,25 +6,24 @@ html(lang='en')
     link(rel='stylesheet', href='css/style.css')
   body
     .wrapper
-      main
+      .three
+      main.main
         .bg-site
-        .face
-          //- .earth
-          .three
-          .movie
-            canvas
-          //- .time
-            time
-        .controller
-          button.btn-gotohead Go to head
-          button.btn-play Play / Pause
-          button.btn-sound(disabled='') Sound on / off
-          span.time
-            time.time-cur
-            | /
-            time.time-total
-          input.slider(type='range', min='0', max='1', step='0.00001', value='0')
-          button.btn-setting(disabled='') Setting
+        .cover
+        .media
+          .face
+            .movie
+              canvas
+          .controller
+            button.btn-gotohead Go to head
+            button.btn-play Play / Pause
+            button.btn-sound(disabled='') Sound on / off
+            span.time
+              time.time-cur
+              | /
+              time.time-total
+            input.slider(type='range', min='0', max='1', step='0.00001', value='0')
+            button.btn-setting(disabled='') Setting
 
     script(src='js/lib/jquery.min.js')
     script(src='js/lib/lodash.min.js')
