--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,12 +7,19 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 html {
   font-size: 10px;
 }
 
 body {
   font-size: 1.4rem;
+
+  overflow: hidden;
 }
 
 main {
@@ -25,15 +32,21 @@ button {
 
   margin: 0;
   padding: 0;
-  }
-  button:hover {
+
+  &:hover {
     cursor: pointer;
   }
-  button[disabled]:hover {
+
+  &[disabled]:hover {
     cursor: default;
   }
+}
 
-.bg-site {
+.wrapper {
+  position: static;
+}
+
+.three {
   position: absolute;
 
   left: 0;
@@ -42,115 +55,149 @@ button {
   z-index: -1;
 }
 
-.face {
+.main {
   position: absolute;
 
   left: 0;
   top: 0;
-
-  width: 640px;
-  height: 350px;
-
-  background-color: #000;
-
-  z-index: 0;
-}
-
-.three, .movie {
-  position: absolute;
 
   width: 100%;
   height: 100%;
 
+  background-image: url(../img/bg.jpg);
+  background-size: cover;
+}
+
+.bg-site {
+  position: absolute;
+
   left: 0;
   top: 0;
 
-  canvas {
-    width: 100%;
-    height: 100%;
-  }
+  width: 100%;
+  height: 100%;
+
+  z-index: 0;
 }
 
-.face .time {
+.cover {
   position: absolute;
+
+  left: 0;
+  top: 0;
 
   width: 100%;
-  height: 30px;
-  line-height: 30px;
-
-  left: 0;
-  top: 50%;
-
-  margin-top: -15px;
-
-  text-align: center;
-
-  color: white;
+  height: 100%;
 }
 
-.controller {
+.media {
   position: absolute;
 
-  left: 0;
-  top: 350px;
+  left: 50%;
+  top: 50%;
 
   width: 640px;
-  height: 30px;
+  height: 360px;
 
-  color: #fff;
-  background-color: #333;
+  margin-left: -320px;
+  margin-top: -180px;
 
-  .time {
-    display: inline-block;
-    width: 280px;
-    font-size: 9px;
+  z-index: 1;
 
-    text-align: center;
+  .face {
+    position: absolute;
+
+    left: 0;
+    top: 0;
+
+    width: 640px;
+    height: 350px;
+
+    background-color: #000;
+
+    z-index: 0;
+
+    .movie {
+      position: absolute;
+
+      width: 100%;
+      height: 100%;
+
+      left: 0;
+      top: 0;
+
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
-  .btn-gotohead {
-    width: 30px;
+  .controller {
+    position: absolute;
+
+    left: 0;
+    top: 350px;
+
+    width: 640px;
     height: 30px;
-    background-image: url(../img/gotohead.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
 
-    text-indent: -9999px;
-  }
-  .btn-play {
-    width: 30px;
-    height: 30px;
-    background-image: url(../img/pause.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
+    color: #fff;
+    background-color: #333;
 
-    text-indent: -9999px;
-  }
-  .btn-play.pause {
-    background-image: url(../img/play.svg);
-  }
-  .btn-sound {
-    width: 30px;
-    height: 30px;
-    background-image: url(../img/sound_on.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
+    .time {
+      display: inline-block;
+      width: 280px;
+      font-size: 9px;
 
-    text-indent: -9999px;
-  }
-  .btn-sound.off {
-  }
-  .btn-setting {
-    width: 30px;
-    height: 30px;
-    background-image: url(../img/setting.svg);
-    background-repeat: no-repeat;
-    background-position: 50% 35%;
-    background-size: 40px;
+      text-align: center;
+    }
 
-    text-indent: -9999px;
+    .btn-gotohead {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/gotohead.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+
+      text-indent: -9999px;
+    }
+    .btn-play {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/pause.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+
+      text-indent: -9999px;
+    }
+    .btn-play.pause {
+      background-image: url(../img/play.svg);
+    }
+    .btn-sound {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/sound_on.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+
+      text-indent: -9999px;
+    }
+    .btn-sound.off {
+    }
+    .btn-setting {
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/setting.svg);
+      background-repeat: no-repeat;
+      background-position: 50% 35%;
+      background-size: 40px;
+
+      text-indent: -9999px;
+    }
   }
+
 }
