--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,8 @@ button {
   width: 100%;
   height: 100%;
   z-index: 0; }
+  .bg-site iframe {
+    background-color: #fff; }
 
 .cover {
   position: absolute;
@@ -109,9 +111,9 @@ button {
   left: 50%;
   top: 50%;
   width: 640px;
-  height: 360px;
+  height: 380px;
   margin-left: -320px;
-  margin-top: -180px;
+  margin-top: -190px;
   z-index: 1; }
   .media .face {
     position: absolute;
