--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,6 +78,10 @@ button {
   height: 100%;
 
   z-index: 0;
+
+  iframe {
+    background-color: #fff;
+  }
 }
 
 .cover {
@@ -97,10 +101,10 @@ button {
   top: 50%;
 
   width: 640px;
-  height: 360px;
+  height: 380px;
 
   margin-left: -320px;
-  margin-top: -180px;
+  margin-top: -190px;
 
   z-index: 1;
 
