--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,5 @@
 @import "reset";
 
-.bg-site {
-}
-
 * {
   box-sizing: border-box;
 }
@@ -63,12 +60,9 @@ button {
 
   width: 100%;
   height: 100%;
-
-  background-image: url(../img/bg.jpg);
-  background-size: cover;
 }
 
-.bg-site {
+.bg {
   position: absolute;
 
   left: 0;
@@ -77,7 +71,14 @@ button {
   width: 100%;
   height: 100%;
 
+  background-image: url(../img/bg.jpg);
+  background-size: cover;
+
   z-index: 0;
+}
+
+.bg-site {
+  position: static;
 
   iframe {
     background-color: #fff;
