--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,8 @@ button {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"); }
 
 .media {
   position: absolute;
