--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -93,6 +93,8 @@ button {
 
   width: 100%;
   height: 100%;
+
+  background-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");
 }
 
 .media {
