--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,6 +4,8 @@ html(lang='en')
     meta(charset='UTF-8')
     title The Earth The Movie
     link(rel='stylesheet', href='css/style.css')
+    link(href='http://fonts.googleapis.com/css?family=Roboto:400', rel='stylesheet', type='text/css')
+
   body
     .wrapper
       .three
