--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -155,6 +155,9 @@ button {
     .time {
       display: inline-block;
       width: 280px;
+
+      font-family: Roboto;
+      font-weight: 400;
       font-size: 9px;
 
       text-align: center;
