--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,6 +11,10 @@ html(lang='en')
       .three
       main.main
         .bg
+        .browser-frame
+          .right
+          .left
+          .title
         .bg-site
         .cover
         .media
