--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,11 @@ table {
 
 html, body {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
 
 html {
   font-size: 10px; }
