--- a/css/style.css
+++ b/css/style.css
@@ -106,25 +106,26 @@ button {
   width: 800px;
   left: 0;
   top: 0;
+  margin-top: -61px;
   z-index: 1; }
   .browser-frame .left {
     position: absolute;
     left: 0;
     top: 0;
-    width: 500px;
+    width: 300px;
     height: 61px;
-    background-image: url(../img/browser-frame.png);
-    background-size: 1366px;
+    background-image: url(../img/browser-frame-left.png);
+    background-size: 300px;
     background-repeat: no-repeat;
     background-position: 0% 0; }
   .browser-frame .right {
     position: absolute;
     right: 0;
     top: 0;
-    width: 500px;
+    width: 100%;
     height: 61px;
-    background-image: url(../img/browser-frame.png);
-    background-size: 1366px;
+    background-image: url(../img/browser-frame-top.png);
+    background-size: 2000px;
     background-repeat: no-repeat;
     background-position: 100% 0; }
   .browser-frame .title {
