--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,7 +85,6 @@ button {
 }
 
 .browser-frame {
-  $width: 1366px;
   $height: 61px;
 
   position: absolute;
@@ -95,6 +94,8 @@ button {
   left: 0;
   top: 0;
 
+  margin-top: - $height;
+
   z-index: 1;
 
   .left {
@@ -103,10 +104,10 @@ button {
     left: 0;
     top: 0;
 
-    width: 500px;
+    width: 300px;
     height: $height;
-    background-image: image-url("browser-frame.png");
-    background-size: $width;
+    background-image: image-url("browser-frame-left.png");
+    background-size: 300px;
     background-repeat: no-repeat;
     background-position: 0% 0;
   }
@@ -117,10 +118,10 @@ button {
     right: 0;
     top: 0;
 
-    width: 500px;
+    width: 100%;
     height: $height;
-    background-image: image-url("browser-frame.png");
-    background-size: $width;
+    background-image: image-url("browser-frame-top.png");
+    background-size: 2000px;
     background-repeat: no-repeat;
     background-position: 100% 0;
   }
