set browser frame

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -120,7 +120,7 @@ button {
 
     width: 100%;
     height: $height;
-    background-image: image-url("browser-frame-top.png");
+    background-image: image-url("browser-frame-right.png");
     background-size: 2000px;
     background-repeat: no-repeat;
     background-position: 100% 0;
