--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ button {
     top: 0;
     width: 100%;
     height: 61px;
-    background-image: url(../img/browser-frame-top.png);
+    background-image: url(../img/browser-frame-right.png);
     background-size: 2000px;
     background-repeat: no-repeat;
     background-position: 100% 0; }
