--- a/css/style.css
+++ b/css/style.css
@@ -222,3 +222,18 @@ button {
       background-position: 50% 35%;
       background-size: 40px;
       text-indent: -9999px; }
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 9999;
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  transition: opacity 3s linear; }
+  .overlay.over {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; }
