--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -31,6 +31,7 @@ html(lang='en')
               time.time-total
             input.slider(type='range', min='0', max='1', step='0.00001', value='0')
             button.btn-setting(disabled='') Setting
+        .overlay
 
     script(src='js/lib/jquery.min.js')
     script(src='js/lib/lodash.min.js')
