--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -268,5 +268,26 @@ button {
       text-indent: -9999px;
     }
   }
+}
 
+.overlay {
+  position: absolute;
+
+  left: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #000;
+
+  z-index: 9999;
+
+  opacity: 1;
+
+  transition: opacity 3s linear;
+
+  &.over {
+    opacity: 0;
+  }
 }
