--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,8 @@ button {
   height: 380px;
   margin-left: -320px;
   margin-top: -190px;
-  z-index: 1; }
+  z-index: 1;
+  visibility: hidden; }
   .media .face {
     position: absolute;
     left: 0;
