add open effect

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,6 +15,7 @@ html(lang='en')
           .right
           .left
           .title
+        .frame-open
         .bg-site
         .cover
         .media
