--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,19 @@ button {
     top: 7px;
     font-size: 11px; }
 
+.frame-open {
+  box-sizing: border-box;
+  position: absolute;
+  border: 4px solid #999;
+  z-index: 2;
+  -webkit-transform: scale(0);
+          transform: scale(0); }
+  .frame-open.open {
+    transition: -webkit-transform 0.3s linear 0s;
+    transition: transform 0.3s linear 0s;
+    -webkit-transform: scale(1);
+            transform: scale(1); }
+
 .bg-site {
   position: static; }
   .bg-site iframe {
