--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -136,6 +136,22 @@ button {
   }
 }
 
+.frame-open {
+  box-sizing: border-box;
+
+  position: absolute;
+  border: 4px solid #999;
+
+  z-index: 2;
+
+  transform: scale(0);
+
+  &.open {
+    transition: transform 0.3s linear 0s;
+    transform: scale(1);
+  }
+}
+
 .bg-site {
   position: static;
 
