--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -23,15 +23,15 @@ html(lang='ja')
             .movie
               canvas
           .controller
-            button.btn-gotohead Go to head
-            button.btn-play Play / Pause
-            button.btn-sound(disabled='') Sound on / off
+            //- button.btn-gotohead Go to head
+            //- button.btn-play Play / Pause
+            //- button.btn-sound(disabled='') Sound on / off
             span.time
               time.time-cur
               | /
               time.time-total
-            input.slider(type='range', min='0', max='1', step='0.00001', value='0')
-            button.btn-setting(disabled='') Setting
+            //- input.slider(type='range', min='0', max='1', step='0.00001', value='0')
+            //- button.btn-setting(disabled='') Setting
         .overlay
 
     script(src='js/lib/jquery.min.js')
