--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -225,11 +225,20 @@ button {
     height: 30px;
 
     color: #fff;
-    background-color: #333;
+    background-image: image-url("media-skin.png");
+    background-size: 640px;
+    // background-color: #333;
 
     .time {
-      display: inline-block;
+      display: block;
+
+      position: absolute;
+      left: 100px;
+
       width: 280px;
+      height: 30px;
+
+      line-height: 30px;
 
       font-family: Roboto;
       font-weight: 400;
@@ -238,51 +247,51 @@ button {
       text-align: center;
     }
 
-    .btn-gotohead {
-      width: 30px;
-      height: 30px;
-      background-image: image-url("gotohead.svg");
-      background-repeat: no-repeat;
-      background-position: 50% 35%;
-      background-size: 40px;
+    // .btn-gotohead {
+    //   width: 30px;
+    //   height: 30px;
+    //   background-image: image-url("gotohead.svg");
+    //   background-repeat: no-repeat;
+    //   background-position: 50% 35%;
+    //   background-size: 40px;
 
-      text-indent: -9999px;
-    }
-    .btn-play {
-      width: 30px;
-      height: 30px;
-      background-image: image-url("pause.svg");
-      background-repeat: no-repeat;
-      background-position: 50% 35%;
-      background-size: 40px;
+    //   text-indent: -9999px;
+    // }
+    // .btn-play {
+    //   width: 30px;
+    //   height: 30px;
+    //   background-image: image-url("pause.svg");
+    //   background-repeat: no-repeat;
+    //   background-position: 50% 35%;
+    //   background-size: 40px;
 
-      text-indent: -9999px;
-    }
-    .btn-play.pause {
-      background-image: image-url("play.svg");
-    }
-    .btn-sound {
-      width: 30px;
-      height: 30px;
-      background-image: image-url("sound_on.svg");
-      background-repeat: no-repeat;
-      background-position: 50% 35%;
-      background-size: 40px;
+    //   text-indent: -9999px;
+    // }
+    // .btn-play.pause {
+    //   background-image: image-url("play.svg");
+    // }
+    // .btn-sound {
+    //   width: 30px;
+    //   height: 30px;
+    //   background-image: image-url("sound_on.svg");
+    //   background-repeat: no-repeat;
+    //   background-position: 50% 35%;
+    //   background-size: 40px;
 
-      text-indent: -9999px;
-    }
-    .btn-sound.off {
-    }
-    .btn-setting {
-      width: 30px;
-      height: 30px;
-      background-image: image-url("setting.svg");
-      background-repeat: no-repeat;
-      background-position: 50% 35%;
-      background-size: 40px;
+    //   text-indent: -9999px;
+    // }
+    // .btn-sound.off {
+    // }
+    // .btn-setting {
+    //   width: 30px;
+    //   height: 30px;
+    //   background-image: image-url("setting.svg");
+    //   background-repeat: no-repeat;
+    //   background-position: 50% 35%;
+    //   background-size: 40px;
 
-      text-indent: -9999px;
-    }
+    //   text-indent: -9999px;
+    // }
   }
 
   visibility: hidden;
