--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -26,10 +26,12 @@ html(lang='ja')
             //- button.btn-gotohead Go to head
             //- button.btn-play Play / Pause
             //- button.btn-sound(disabled='') Sound on / off
-            span.time
+            .time
               time.time-cur
-              | /
+              |  /
               time.time-total
+            .slider
+              .slider-cur
             //- input.slider(type='range', min='0', max='1', step='0.00001', value='0')
             //- button.btn-setting(disabled='') Setting
         .overlay
