--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,6 +17,7 @@ html(lang='ja')
           .title
         .frame-open
         .bg-site
+          iframe
         .cover
         .media
           .face
